# gatk4

./: .gitignore  .gitmodules  Jenkinsfile  Jenkinsfile-hwc  Jenkinsfile-local  README.md  build.gradle  build.sh  jenkinsut
falcon/: build.gradle
falcon/src/main/c/: .gitignore  CMakeLists.txt
falcon/src/main/c/cmake/: FindBlaze.cmake  FindFalconLM.cmake  FindGoogle.cmake  FindPairhmmClient.cmake
falcon/src/main/c/include/: Common.h  SimpleTimer.h
falcon/src/main/c/include/pairhmm/avx/: avx-pairhmm-template.h  avx-pairhmm.h  avx_impl.h
falcon/src/main/c/include/pairhmm/client/: PairhmmClient.h  PairhmmHostInterface.h  PairhmmWorker.h
falcon/src/main/c/include/pairhmm/common/: PairhmmJavaData.h  pairhmm_common.h
falcon/src/main/c/src/: com_falconcomputing_genomics_NativeLibraryLoader.cpp  com_falconcomputing_genomics_NativeLibraryLoader.h
falcon/src/main/c/src/bqsr/: BAQ.cpp  BAQ.h  Covariates.cpp  Covariates.h  MathUtils.cpp  MathUtils.h  RecalibrationTable.cpp  RecalibrationTable.h  Timer.h  com_falconcomputing_genomics_bqsr_FalconRecalibrationEngine.cpp  com_falconcomputing_genomics_bqsr_FalconRecalibrationEngine.h
falcon/src/main/c/src/haplotypecaller/: PairhmmJavaData.h  com_falconcomputing_genomics_haplotypecaller_FalconPairhmm.cpp  com_falconcomputing_genomics_haplotypecaller_FalconPairhmm.h  com_falconcomputing_genomics_haplotypecaller_FalconSWPairwiseAlignment.cpp  com_falconcomputing_genomics_haplotypecaller_FalconSWPairwiseAlignment.h  com_falconcomputing_genomics_haplotypecaller_FalconSmithWaterman.cpp  com_falconcomputing_genomics_haplotypecaller_FalconSmithWaterman.h
falcon/src/main/c/src/haplotypecaller/pairhmm/avx/: avx_impl.cpp
falcon/src/main/c/src/haplotypecaller/pairhmm/client/: PairhmmClient.cpp  PairhmmHostInterface.cpp  PairhmmWorker.cpp
falcon/src/main/c/src/haplotypecaller/smithwaterman/: PairWiseSW.h  avx2_impl.cpp  avx2_impl.h  smithwaterman_common.h
falcon/src/main/c/test/: BAQTest.cpp  main_test.cpp
falcon/src/main/java/com/falconcomputing/genomics/: AccelerationException.java  NativeLibraryLoader.java
falcon/src/main/java/com/falconcomputing/genomics/bqsr/: FalconRecalibrationEngine.java
falcon/src/main/java/com/falconcomputing/genomics/haplotypecaller/: FalconPairhmm.java  FalconSmithWaterman.java
falcon/src/test/java/com/falconcomputing/genomics/bqsr/: FalconRecalibrationEngineTest.java  RecalDatumTest.java  TestHelper.java
falcon/src/test/java/com/falconcomputing/genomics/haplotypecaller/: FalconPairhmmTest.java
falcon/src/test/resources/: .gitignore
falcon/src/test/resources/com/falconcomputing/genomics/: get-data.sh
falcon/src/test/resources/com/falconcomputing/genomics/bqsr/: .gitignore
scripts/sv/: create_cluster.sh
src/main/java/org/broadinstitute/hellbender/tools/: ApplyBQSRArgumentCollection.java
src/main/java/org/broadinstitute/hellbender/transformers/: BQSRReadTransformer.java
(+11 files in other folders)
